# ParaFlow

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  DrawSubdomain.cpp  PROFILING.md  ParaFlow.cpp  ParaFlow.hpp  ParaFlow_pathline.cpp  ParaFlow_streamline.cpp  README.md  Streamline.cpp  block.hpp  build.sh  clean.sh  config.yaml  gen_eastcoast_plots.py  gen_random_seeds.py  job_drawsubdomain.sh  job_pathline.sh  job_pathline_gpu_16nodes.sh  job_streamline.sh  job_streamline_gpu_16nodes.sh  job_streamline_small.sh  parse_mem.py  parse_timing.py  plot_timing.py  plot_traces.py  plot_traces.sh  read_traces.py  switch.sh  utils.hpp
ParaFlow/: CMakeLists.txt  ParaFlow.cpp  ParaFlow.hpp  block.hpp  gpu_parity_tests.hpp  timing.hpp  utils.hpp
ParaFlow/OSUFlow/: CMakeLists.txt  CurvilinearGrid.C  CurvilinearGrid.h  Element.h  Field.C  Field.h  FieldLine.C  FieldLine.h  FileReader.C  FileReader.h  Grid.C  Grid.h  Interpolator.C  Interpolator.h  LoadTiming.h  MPASOReader.C  MPASOReader.h  MPASOheader.h  OSUFlow.C  OSUFlow.h  PathLine.C  Plot3DReader.C  Plot3DReader.h  Rake.C  Rake.h  Solution.C  Solution.h  StreakLine.C  Streamline.C  TimeLine.C  TimeVaryingFieldLine.C  VectorMatrix.C  VectorMatrix.h  header.h  perlmutter_cmake.sh
ParaFlow/OSUFlow/GPU/CUDA/: MPASODeviceField.cu  MPASODeviceField.h  MPASOGPUTracer.cpp  MPASOGPUTracer.h
ParaFlow/OSUFlow/GPU/CUDA/Kernel/: MPASOTracerKernels.cu  MPASOTracerKernels.h  MPASOVelocity.cuh
ParaFlow/yaml-cpp/: perlmutter_cmake.sh
ParaFlow/yaml-cpp/util/: parse  read  sandbox
conf/: ParaFlow_pathline.yaml  ParaFlow_streamline.yaml  debug_lowres_pathline_cpu_1rank.yaml  debug_lowres_pathline_cpu_1rank_w1.yaml  debug_lowres_pathline_cpu_1rank_w2.yaml  debug_lowres_pathline_cpu_1rank_w3.yaml  debug_lowres_pathline_cpu_1rank_w8.yaml  debug_lowres_streamline_1block.yaml  debug_lowres_streamline_cpu_1rank.yaml  drawsubdomain.yaml  drawsubdomain_normal.yaml  gpu_parity_pathline.yaml  gpu_parity_streamline.yaml  lic_batch_gpu.yaml  lic_streamline.yaml  lic_streamline_gpu.yaml  nersc_highres_cpu.yaml  nersc_highres_drawsubdomain.yaml  nersc_highres_gpu.yaml  nersc_highres_pathline.yaml  nersc_highres_pathline_gpu.yaml  nersc_lowres_cpu.yaml  nersc_lowres_drawsubdomain.yaml  nersc_lowres_gpu.yaml  nersc_lowres_pathline.yaml  nersc_lowres_pathline_gpu.yaml  osc_ParaFlow_pathline.yaml  osc_ParaFlow_pathline_gpu.yaml  osc_ParaFlow_streamline.yaml  osc_ParaFlow_streamline_gpu.yaml  osc_drawsubdomain.yaml  serial_trace.yaml
jobs/: nersc_highres_cpu.sh  nersc_highres_gpu.sh  nersc_lowres_cpu.sh  nersc_lowres_gpu.sh  osc_lic_batch_gpu.sh  osc_run.sh
rendering/: active_seeds.py  earth_pathline_opengl.py  render_3d_animation.py  render_log_atlantic_active.txt  render_log_pacific_active_v2.txt
rendering/LIC/: CMakeLists.txt  ParaFlow_lic.cpp  ParaFlow_lic_gpu.cpp  README.md  build_lic.sh  build_lic_gpu.sh  lic_core.hpp  lic_render.hpp
rendering/opengl/: earth_pathline_opengl.py
scripts/plot/: convert_traces_to_vtk.py  drawsubdomain.py  plot_pathlines.py  plot_streamlines.py  plot_traces.py  plot_traces_latlon.py
scripts/profiling/: parse_timing.py  plot_timing.py  profiling.md
scripts/setup/: check_atlantic_seeds.py  gen_block_centroids.py  gen_cell_workmap.py  gen_partition.py  gen_random_seeds.py
